--- a/package.json
+++ b/package.json
@@ -14,9 +14,14 @@
     "type-check": "tsc"
   },
   "dependencies": {
+    "@chakra-ui/react": "^2.8.2",
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
     "@reduxjs/toolkit": "^1.8.1",
+    "framer-motion": "^10.16.16",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-loader-spinner": "^6.1.0",
     "react-redux": "^8.0.1",
     "react-router-dom": "^6.20.1"
   },
