--- a/package.json
+++ b/package.json
@@ -17,13 +17,18 @@
     "@chakra-ui/react": "^2.8.2",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
+    "@hookform/resolvers": "^3.3.2",
     "@reduxjs/toolkit": "^1.8.1",
     "framer-motion": "^10.16.16",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.48.2",
     "react-loader-spinner": "^6.1.0",
     "react-redux": "^8.0.1",
-    "react-router-dom": "^6.20.1"
+    "react-router-dom": "^6.20.1",
+    "react-validation": "^3.0.7",
+    "validator": "^13.11.0",
+    "yup": "^1.3.2"
   },
   "devDependencies": {
     "@testing-library/dom": "^9.2.0",
