--- a/package.json
+++ b/package.json
@@ -51,7 +51,12 @@
     "tailwindcss": "^3.3.6",
     "typescript": "^5.0.2",
     "vite": "^4.0.0",
-    "vitest": "^0.30.1"
+    "vitest": "^0.30.1",
+    "next-auth": "^4.20.1",
+    "@moralisweb3/next": "^2.14.1",
+    "moralis": "^2.18.4",
+    "viem": "^1.6.0",
+    "wagmi": "^0.9.2"
   },
   "eslintConfig": {
     "extends": [
