--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-redux": "^8.0.1",
     "react-router-dom": "^6.20.1",
     "react-validation": "^3.0.7",
+    "swiper": "^11.0.5",
     "validator": "^13.11.0",
     "yup": "^1.3.2"
   },
