--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-router-dom": "^6.20.1",
     "react-validation": "^3.0.7",
     "swiper": "^11.0.5",
+    "use-window-focus": "^1.4.2",
     "validator": "^13.11.0",
     "yup": "^1.3.2"
   },
