--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.48.2",
     "react-icons": "^4.12.0",
+    "react-lazy-load-image-component": "^1.6.0",
     "react-loader-spinner": "^6.1.0",
     "react-redux": "^8.0.1",
     "react-router-dom": "^6.20.1",
