--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "set NODE_ENV=development && vite --mode development",
-    "start": "set NODE_ENV=production && vite --mode production",
+    "dev": "export NODE_ENV=development && vite --mode development",
+    "start": "export NODE_ENV=production && vite --mode production",
     "build": "tsc && vite build",
     "preview": "vite preview",
     "test": "vitest",
