--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "set NODE_ENV=development && vite --mode development",
-    "start": "set NODE_ENV=production && vite --mode production",
+    "dev": "export NODE_ENV=development && vite --mode development",
+    "start": "export NODE_ENV=production && vite --mode production",
     "build": "tsc && vite build",
     "preview": "vite preview",
     "test": "vitest",
@@ -30,6 +30,7 @@
     "react-redux": "^8.0.1",
     "react-router-dom": "^6.20.1",
     "react-validation": "^3.0.7",
+    "socket.io-client": "^4.7.4",
     "swiper": "^11.0.5",
     "use-window-focus": "^1.4.2",
     "validator": "^13.11.0",
@@ -59,7 +60,7 @@
     "tailwindcss": "^3.3.6",
     "typescript": "^5.0.2",
     "viem": "^1.6.0",
-    "vite": "^4.0.0",
+    "vite": "^4.2.2",
     "vitest": "^0.30.1",
     "wagmi": "^0.9.2"
   },
