--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-loader-spinner": "^6.1.0",
     "react-redux": "^8.0.1",
     "react-router-dom": "^6.20.1",
+    "react-router-hash-link": "^2.4.3",
     "react-validation": "^3.0.7",
     "socket.io-client": "^4.7.4",
     "swiper": "^11.0.5",
@@ -44,6 +45,7 @@
     "@testing-library/user-event": "^14.2.5",
     "@types/react": "^18.0.15",
     "@types/react-dom": "^18.0.6",
+    "@types/react-router-hash-link": "^2.4.9",
     "@types/testing-library__jest-dom": "^5.14.5",
     "@vitejs/plugin-react": "^4.0.0",
     "autoprefixer": "^10.4.16",
