--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "flowbite-react": "^0.7.2",
     "framer-motion": "^10.16.16",
     "react": "^18.2.0",
+    "react-device-detect": "^2.2.3",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.48.2",
     "react-icons": "^4.12.0",
@@ -32,7 +33,7 @@
     "react-router-hash-link": "^2.4.3",
     "react-validation": "^3.0.7",
     "socket.io-client": "^4.7.4",
-    "swiper": "^11.0.5",
+    "swiper": "^11.0.7",
     "use-window-focus": "^1.4.2",
     "validator": "^13.11.0",
     "yup": "^1.3.2"
