--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@emotion/styled": "^11.11.0",
     "@hookform/resolvers": "^3.3.2",
     "@reduxjs/toolkit": "^1.8.1",
+    "axios": "^1.6.8",
     "flowbite-react": "^0.7.2",
     "framer-motion": "^10.16.16",
     "react": "^18.2.0",
